--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -22,7 +22,19 @@
     }
   }
 
+  &__register-link {
+    display: block;
+    text-align: center;
+  }
+
   .block {
      width: 430px;
+  }
+  .button {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.1px;
+    width: 100%;
   }
 }
