--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,6 +1,80 @@
-.button {
-  &--large {
-    height: 56px !important;
+@import "../../styles/variables";
+
+.message {
+  $self: &;
+
+  &__content {
+    display: flex;
+    max-width: 440px;
+    margin-bottom: 15px;
+    position: relative;
   }
+
+  &__avatar {
+    display: flex;
+    flex-direction: column-reverse;
+    img {
+      border-radius: 50px;
+      width: 33px;
+      height: 33px;
+      margin-right: 13px;
+      margin-bottom: 23px;
+    }
+  }
+
+  &__bubble {
+    background: $blue;
+    box-shadow: 0px 5px 5px rgba(54,116,255,0.196733);
+    border-radius: 12px 12px 12px 0px;
+    padding: 15px;
+    margin-bottom: 8px;
+  }
+
+  &__date {
+    font-size: 12px;
+    opacity: 0.5;
+  }
+
+  &__text {
+    color: #fff;
+    line-height: 20px;
+  }
+
+  &__icon-readed {
+    position: absolute;
+    bottom: 20px;
+    left: -25px;
+  }
+
+  &--isme {
+    display: flex;
+    flex-direction: row-reverse;
+
+    #{$self}__content {
+      margin-bottom: 15px;
+      flex-direction: row-reverse;
+    }
+
+    #{$self}__avatar {
+      img {
+        margin-right: 0;
+        margin-left: 13px;
+      }
+    }
+
+    #{$self}__bubble {
+      background: #FFFFFF;
+    }
+
+    #{$self}__text {
+      color: $black;
+    }
+
+    #{$self}__date {
+      text-align: right;
+    }
+  }
+
+
 
 }
