--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -40,6 +40,25 @@
     line-height: 20px;
   }
 
+  &__info {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__attachments {
+    display: flex;
+    margin-bottom: 5px;
+    cursor: pointer;
+    &-item {
+      margin-right: 5px;
+      img {
+        width: 45px;
+        height: 45px;
+        border-radius: 8px;
+      }
+    }
+  }
+
   &__icon-readed {
     position: absolute;
     bottom: 20px;
@@ -64,6 +83,7 @@
 
     #{$self}__bubble {
       background: #FFFFFF;
+      border-radius: 12px 12px 0px 12px;
     }
 
     #{$self}__text {
